# kanami

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  run.sh
.cargo/: config.toml
src/: config.def.rs  logger.rs  main.rs
src/application/: builtin.rs  cat.rs  chat.rs  cron.rs  mod.rs  muri.rs  ping.rs  template.rs
src/application/gscore/: daemon.rs  mod.rs  model.rs
src/protocol/: adapter.rs  message.rs  mod.rs
src/protocol/event/: message.rs  meta.rs  mod.rs  notice.rs  request.rs
src/protocol/extension/: mod.rs  napcat.rs  onebot.rs
