[package]
name = "kanami"
version = "0.1.0"
edition = "2024"
description = "A suckless styled QQ bot client works with NapCat"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.88"
chrono = "0.4.41"
dashmap = "6.1.0"
futures-util = "0.3"
lazy_static = "1.5.0"
log = "0.4.27"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = "0.27.0"
uuid = { version = "1.18.0", features = ["v4"] }
tokio-cron-scheduler = "0.14.0"


[features]
default = ["napcat"]
napcat = []
tls = ["tokio-tungstenite/native-tls"]
